<resources>
    <string name="app_name">PotaScan</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Upload</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="sakit">Waduh, kentang Anda sakit!</string>

    <string name="hint_name">Name</string>
    <string name="hint_pass">Password</string>
    <string name="hint_confirm_pass">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hypertext_login">Belum punya akun?</string>
    <string name="hypertext_regist">Sudah punya akun?</string>

    <string name="titleArticle">edited Tak Hanya Mudah Diolah, Intip 7 Manfaat Kentang untuk Tubuh</string>
    <string name="dated_article">2023–05–24</string>
    <string name="category_article">Healty</string>
    <string name="writer_article">Andreas Wilson Setiawan</string>

    <string name="instruksi">Instruksi</string>
    <string name="logout">Log Out</string>

    <string name="title_card">6 Penyakit Pada Kentang dan Cara Mengendalikannya</string>
    <string name="btn_text">Umum</string>

    <string name="description_card">Factors to Consider Database selection
in the first parth of our series, we laid the
foundation for undaerstanding the vario..</string>

    <string name="teks_upload">Ambil Foto dengan memilih tombol di bawah</string>

    <string name="early_blight_title">Early Blight</string>
    <string name="early_blight_deskripsi">Early blight adalah penyakit pada tanaman kentang
        yang disebabkan oleh jamur Alternaria solani.
        Gejalanya termasuk bintik cokelat pada daun, batang, dan buah.
        Penyakit early blight dapat menyebar melalui spora yang dihasilkan oleh jamur
        dan dapat bertahan dalam sisa-sisa tanaman yang terinfeksi.
        Faktor lingkungan seperti kelembaban dan suhu yang tinggi mempengaruhi perkembangan penyakit ini.
        Early blight dapat dikendalikan dengan pemilihan varietas tahan, rotasi tanaman, sanitasi,
        dan penggunaan fungisida.</string>

    <string name="late_blight_title">Late Blight</string>
    <string name="late_blight_deskripsi">Late blight adalah penyakit pada tanaman kentang
        yang disebabkan oleh jamur Phytophthora infestans. Gejalanya berupa
        bintik keabu-abuan atau hitam pada daun, batang, dan buah.
        Late blight sering terjadi pada iklim yang lembab dan suhu yang relatif sejuk.
        Penyebarannya cepat melalui spora dan membutuhkan penggunaan fungisida
        dan tindakan pencegahan seperti sanitasi dan pengawasan rutin</string>

    <string name="result_sehat_title">Sehat!</string>
    <string name="result_sehat_deskripsi">Kentang Anda dalam kondisi baik!</string>

    <string name="error_title">Terjadi Kesalahan!</string>
    <string name="error_deskripsi">Tidak ada gambar yang dipilih</string>

    <string name="title_instruction">Petunjuk</string>
    <string name="caption_instruction">Fokuskan pengambilan gambar
        pada bagian daun kentang
        seperti contoh berikut
        menggunakan kamera belakang.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
</resources>