<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.EarlyBlightResultActivity">

        <ImageView
            android:id="@+id/img_result"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="28dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sick_potato" />

        <TextView
            android:id="@+id/sakit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/img_result"
            android:text="@string/sakit"
            android:layout_marginBottom="24dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/early_blight_title"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="110dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_result" />

        <TextView
            android:id="@+id/disease_deskripsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/early_blight_deskripsi"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>